Fix features icon alignment with bottom aligned more link

--- a/widgets/features/styles/default.less
+++ b/widgets/features/styles/default.less
@@ -53,7 +53,6 @@
 		& when ( @more_text_bottom_align = true ) {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-between;
 		}
 
 		@media (min-width: @responsive_breakpoint) {
@@ -142,7 +141,8 @@
 			flex: 0 0 @container_size;
 
 			& when ( @more_text_bottom_align = true ) {
-				margin: auto;
+				margin-left: auto;
+				margin-right: auto;
 			}
 
 			&:not(.sow-container-none) [class^="sow-icon-"],
@@ -231,7 +231,7 @@
 				.textwidget {
 					display: flex;
 					flex-direction: column;
-					justify-content: space-between;
+					justify-content: flex-start;
 				}
 			}
 
@@ -245,6 +245,10 @@
 			color: @more_text_color;
 			font-size: @more_text_size;
 			font-style: @more_text_font_style;
+
+			& when ( @more_text_bottom_align = true ) {
+				margin-top: auto;
+			}
 
 			a {
 				color: inherit;
